feat: upgrades many major deps, for example JDK 21 and Spring 3.1.x