@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.4</version>
+        <version>3.1.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.streamarr</groupId>
@@ -14,7 +14,7 @@
     <name>Streamarr-Server</name>
     <description>Streamarr, the open source media server system.</description>
     <properties>
-        <java.version>19</java.version>
+        <java.version>21</java.version>
         <sonar.projectKey>streamarr_streamarr-server</sonar.projectKey>
         <sonar.organization>streamarr</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
@@ -25,25 +25,25 @@
         <sonar.test.inclusions>**/src/test/**</sonar.test.inclusions>
         <sonar.exclusions>**/jooq/generated/**</sonar.exclusions>
 
-        <apache-commons-lang.version>3.12.0</apache-commons-lang.version>
-        <apache-commons-io.version>2.11.0</apache-commons-io.version>
-        <dgs-graphql.version>5.2.4</dgs-graphql.version>
-        <flyway.version>8.5.13</flyway.version>
-        <lombok.version>1.18.24</lombok.version>
+        <apache-commons-lang.version>3.13.0</apache-commons-lang.version>
+        <apache-commons-io.version>2.13.0</apache-commons-io.version>
+        <dgs-graphql.version>7.5.3</dgs-graphql.version>
+        <flyway.version>9.22.2</flyway.version>
+        <lombok.version>1.18.30</lombok.version>
         <lombok.mapstruct-binding.version>0.2.0</lombok.mapstruct-binding.version>
-        <postgresql.version>42.5.0</postgresql.version>
-        <methvin-directory-watcher.version>0.16.1</methvin-directory-watcher.version>
-        <jooq.version>3.17.4</jooq.version>
-        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
+        <postgresql.version>42.6.0</postgresql.version>
+        <methvin-directory-watcher.version>0.18.0</methvin-directory-watcher.version>
+        <jooq.version>3.18.6</jooq.version>
+        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
         <yaml-properties-maven-plugin.version>1.1.3</yaml-properties-maven-plugin.version>
-        <hibernate-types.version>2.19.2</hibernate-types.version>
-        <thumbnailator.version>0.4.17</thumbnailator.version>
+        <hibernate-types.version>3.5.2</hibernate-types.version>
+        <thumbnailator.version>0.4.20</thumbnailator.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
         <methanol-client.version>1.7.0</methanol-client.version>
-        <jimfs.version>1.2</jimfs.version>
-        <testcontainers.version>1.17.3</testcontainers.version>
+        <jimfs.version>1.3.0</jimfs.version>
+        <testcontainers.version>1.19.0</testcontainers.version>
         <awaitility.version>4.2.0</awaitility.version>
-        <jacoco.version>0.8.8</jacoco.version>
+        <jacoco.version>0.8.10</jacoco.version>
         <surefire-failsafe-plugin.version>2.22.2</surefire-failsafe-plugin.version>
     </properties>
 
@@ -140,8 +140,8 @@
         </dependency>
 
         <dependency>
-            <groupId>com.vladmihalcea</groupId>
-            <artifactId>hibernate-types-55</artifactId>
+            <groupId>io.hypersistence</groupId>
+            <artifactId>hypersistence-utils-hibernate-62</artifactId>
             <version>${hibernate-types.version}</version>
         </dependency>
 
@@ -230,9 +230,6 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
@@ -255,9 +252,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <jvmArguments>--enable-preview</jvmArguments>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
@@ -361,19 +355,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire-failsafe-plugin.version}</version>
-                <configuration>
-                    <!--suppress UnresolvedMavenProperty -->
-                    <argLine>${surefire.jacoco.args} --enable-preview</argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${surefire-failsafe-plugin.version}</version>
-                <configuration>
-                    <!--suppress UnresolvedMavenProperty -->
-                    <argLine>${failsafe.jacoco.args} --enable-preview</argLine>
-                </configuration>
                 <executions>
                     <execution>
                         <goals>
